--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -1,18 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   font: 100% Helvetica, sans-serif;
   overflow-x: hidden;
+  background-color: #161616;
 }
 
 header {
   display: block;
   width: 100%;
   background-color: #161616;
-  position: fixed;
 }
 
 header .logo-container {
@@ -29,7 +31,8 @@ header .logo-container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 4vh;
+  padding-top: 11vh;
+  margin-bottom: 15px;
 }
 
 header .logo-container .logo img {
@@ -43,8 +46,9 @@ header .head-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
   width: 100vw;
-  height: 4vh;
+  height: 10vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -55,6 +59,7 @@ header .head-container {
   -webkit-box-align: right;
       -ms-flex-align: right;
           align-items: right;
+  background-color: #161616;
 }
 
 header .head-container #hamburger-menu {
@@ -78,9 +83,12 @@ header .head-container #hamburger-menu img {
   -ms-flex-item-align: center;
       align-self: center;
   width: auto;
-  height: 4vh;
-  padding-right: 15px;
-  padding-top: 15px;
+  height: 8vh;
+  min-height: 42px;
+  max-height: 47px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 header .menu-container {
@@ -98,12 +106,14 @@ header .menu-container {
 
 header .menu-container .nav {
   position: absolute;
+  z-index: 100;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 93vh;
+  height: 89vh;
   width: 75vw;
-  top: 7vh;
+  top: 11vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -142,6 +152,7 @@ header .menu-container .nav ul a .active {
   font-weight: bold;
   text-decoration: underline;
   color: #ef9629;
+  background-color: #161616;
 }
 
 header .menu-container .nav-active {
@@ -173,5 +184,157 @@ header .menu-container .nav-active {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
+}
+
+.slideshow-container {
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+  height: 50vh;
+}
+
+.slideshow-container img {
+  position: absolute;
+  height: 100%;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.slide {
+  display: none;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.next {
+  right: 0;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.dot-container {
+  margin-top: 15px;
+  text-align: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 0 3px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  -webkit-transition: background-color 0.6s ease;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #ef9629;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+          animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#submit {
+  margin-top: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#submit #submit-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#submit #submit-button .halfCircleLeft {
+  width: 25px;
+  height: 50px;
+  border: 3px solid white;
+  border-right: none;
+  border-radius: 25px 0 0 25px;
+}
+
+#submit #submit-button .rectangle {
+  width: 150px;
+  height: 50px;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
+  text-align: center;
+}
+
+#submit #submit-button .rectangle a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+#submit #submit-button .halfCircleRight {
+  width: 25px;
+  height: 50px;
+  border: 3px solid white;
+  border-left: none;
+  border-radius: 0 25px 25px 0;
+}
+
+#submit-button:hover > div {
+  background-color: #5f5f5f;
+  color: black;
 }
 /*# sourceMappingURL=mobile.css.map */
