--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -2,43 +2,49 @@ $font-stack: Helvetica, sans-serif;
 $font-color: rgb(255, 255, 255);
 $background-color: rgb(22, 22, 22);
 $logo-color: #ef9629;
+$hover-background: rgb(95, 95, 95);
 
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font: 100% $font-stack;
     overflow-x:hidden;
+    background-color: $background-color;
 }
 
 // top navigation bar 
 
 header {
     display: block;
+    width: 100%;
+    background-color: $background-color;
+// Logo styling     
     .logo-container{
         display:flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        padding-top: 4vh;
+        padding-top: 11vh;
+        margin-bottom: 15px;
         .logo img{
             width: 90vw;
             align-self:center;
         }
     }
-
-    width: 100%;
-    background-color: $background-color;
-    position: fixed;
+// Hamburger menu styling 
     .head-container{
         display: flex;
+        position:fixed;
         width: 100vw;
-        height: 4vh;
+        height: 10vh;
         flex-direction: row;
         justify-content: flex-end;
         align-items: right;
+        background-color: $background-color;
         #hamburger-menu{
             display:flex;
             margin: 0;
@@ -50,22 +56,30 @@ header {
                 display: flex;
                 align-self:center;
                 width: auto;
-                height: 4vh;
-                padding-right: 15px;
-                padding-top: 15px;
+                height: 8vh;
+                min-height: 42px;
+                max-height: 47px;
+                padding-right: 20px;
+                padding-top: 10px;
+                padding-bottom: 5px;
+
             }
         }
     }
+// menu styling and animations
     .menu-container{
         display:flex;
         flex-direction:row;
         justify-content: flex-end;
+        // menu styling when hamburger button is pressed
         .nav{
             position: absolute;
+            z-index: 100;
+            position: fixed;
             display:flex;
-            height: 93vh;
+            height: 89vh;
             width: 75vw;
-            top: 7vh;
+            top: 11vh;
             align-items:center;
             justify-content: space-around;
             background-color: $background-color;
@@ -92,6 +106,7 @@ header {
                             font-weight: bold;
                             text-decoration: underline;
                             color: $logo-color;
+                            background-color:$background-color;
                     }
                 }
             }
@@ -116,5 +131,117 @@ header {
 
 }
 
+// slideshow carousel 
 
+ .slideshow-container{
+    width: 100vw;
+    position: relative;
+    overflow: hidden; // crops pictures
+    height: 50vh;
+    img{
+        position:absolute;
+        height:100%;
+        left:50%;
+        top:50%;
+        transform:translate(-50%, -50%);
+    }
+ }
 
+    .slide{
+        display: none;
+    }
+
+    .prev, .next{
+        cursor: pointer;
+        position: absolute;
+        top: 40%;
+        width: auto;
+        padding: 15px;
+        color: white;
+        font-weight: bold;
+        font-size: 25px;
+        transition: 0.6s ease;
+        user-select: none;
+    }
+
+    .next{
+        right: 0;
+    }
+
+    .prev:hover, .next:hover{
+        background-color: rgba(0,0,0,0.9);
+    }
+    // styling to make dots border-radius for corners
+    .dot-container{
+        margin-top: 15px;
+        text-align: center;
+    }
+    .dot{
+        cursor: pointer;
+        height: 12px;
+        width: 12px;
+        margin: 0 3px;
+        background-color: white;
+        border-radius: 50%;
+        display: inline-block; // use this to show inside the container
+        transition: background-color 0.6s ease;
+    }
+    .active, .dot:hover{
+        background-color: $logo-color;
+    }
+
+    .fade{
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+    @keyframes fade{
+        from{opacity: .4}
+        to{opacity: 1}
+    }
+
+    // submit quote
+
+    #submit{
+        margin-top: 15px;
+        display:flex;
+        flex-direction:column;
+        #submit-button{
+            display:flex;
+            flex-direction:row;
+            justify-content: center;
+            .halfCircleLeft{
+                width: 25px;
+                height: 50px;
+                border: 3px solid $font-color;
+                border-right: none;
+                border-radius: 25px 0 0 25px;
+            }
+            .rectangle{
+                width: 150px;
+                height: 50px;
+                border-top: 3px solid $font-color;
+                border-bottom: 3px solid $font-color;
+                text-align:center;
+                a{
+                    text-decoration: none;
+                    color: $font-color;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                    letter-spacing: 3px;
+                }
+            }
+            .halfCircleRight{
+                width: 25px;
+                height: 50px;
+                border: 3px solid $font-color;
+                border-left: none;
+                border-radius: 0 25px 25px 0;            
+            }
+    }
+
+}
+
+#submit-button:hover > div{
+    background-color: $hover-background;    
+    color: black;
+}
