--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -47,6 +47,7 @@ header .head-container {
   display: -ms-flexbox;
   display: flex;
   position: fixed;
+  z-index: 98;
   width: 100vw;
   height: 10vh;
   -webkit-box-orient: horizontal;
@@ -60,6 +61,7 @@ header .head-container {
       -ms-flex-align: right;
           align-items: right;
   background-color: #161616;
+  opacity: 0.95;
 }
 
 header .head-container #hamburger-menu {
@@ -74,6 +76,7 @@ header .head-container #hamburger-menu {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  height: 10vh;
 }
 
 header .head-container #hamburger-menu img {
@@ -82,13 +85,14 @@ header .head-container #hamburger-menu img {
   display: flex;
   -ms-flex-item-align: center;
       align-self: center;
-  width: auto;
+  z-index: 99;
   height: 8vh;
   min-height: 42px;
   max-height: 47px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 5px;
+  padding-right: 6vw;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  opacity: 1;
 }
 
 header .menu-container {
@@ -111,16 +115,16 @@ header .menu-container .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 89vh;
+  height: 90vh;
   width: 75vw;
-  top: 11vh;
+  top: 10vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #161616;
-  opacity: 0.9;
+  opacity: 0.95;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 0.5s ease-in;
@@ -141,7 +145,7 @@ header .menu-container .nav ul li a:hover {
 }
 
 header .menu-container .nav ul a {
-  color: white;
+  color: #e9e9e9;
   text-decoration: none;
   letter-spacing: 3px;
   font-size: 14px;
@@ -186,8 +190,21 @@ header .menu-container .nav-active {
   }
 }
 
+.carousel-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .slideshow-container {
-  width: 100vw;
+  width: 90vw;
   position: relative;
   overflow: hidden;
   height: 50vh;
@@ -211,7 +228,7 @@ header .menu-container .nav-active {
   position: absolute;
   top: 40%;
   width: auto;
-  padding: 15px;
+  padding: 5vw;
   color: white;
   font-weight: bold;
   font-size: 25px;
@@ -304,7 +321,7 @@ header .menu-container .nav-active {
 #submit #submit-button .halfCircleLeft {
   width: 25px;
   height: 50px;
-  border: 3px solid white;
+  border: 3px solid #e9e9e9;
   border-right: none;
   border-radius: 25px 0 0 25px;
 }
@@ -312,14 +329,14 @@ header .menu-container .nav-active {
 #submit #submit-button .rectangle {
   width: 150px;
   height: 50px;
-  border-top: 3px solid white;
-  border-bottom: 3px solid white;
+  border-top: 3px solid #e9e9e9;
+  border-bottom: 3px solid #e9e9e9;
   text-align: center;
 }
 
 #submit #submit-button .rectangle a {
   text-decoration: none;
-  color: white;
+  color: #e9e9e9;
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -328,7 +345,7 @@ header .menu-container .nav-active {
 #submit #submit-button .halfCircleRight {
   width: 25px;
   height: 50px;
-  border: 3px solid white;
+  border: 3px solid #e9e9e9;
   border-left: none;
   border-radius: 0 25px 25px 0;
 }
@@ -336,5 +353,53 @@ header .menu-container .nav-active {
 #submit-button:hover > div {
   background-color: #5f5f5f;
   color: black;
+}
+
+#downward-arrow {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  margin-top: 2vh;
+  text-align: center;
+}
+
+#downward-arrow a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 30px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+#about-us-container {
+  text-align: center;
+  color: #e9e9e9;
+}
+
+#about-us-container h2 {
+  margin-top: 2vh;
+  text-decoration: underline;
+  font-size: 19px;
+}
+
+#about-us-container p {
+  margin-top: 2vh;
+  padding: 0 3vw 0 3vw;
+  font-size: 14px;
+}
+
+#line {
+  border-top: 1px solid #ef9629;
+  margin-top: 2vh;
+}
+
+#contact-info {
+  margin: 2vh 0 2vh 0;
+  color: #e9e9e9;
+  text-align: center;
+  font-size: 15px;
 }
 /*# sourceMappingURL=mobile.css.map */
