--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -9,6 +9,7 @@ body {
   font: 100% Helvetica, sans-serif;
   overflow-x: hidden;
   background-color: #161616;
+  height: 100%;
 }
 
 header {
@@ -85,11 +86,12 @@ header .head-container #hamburger-menu img {
   display: flex;
   -ms-flex-item-align: center;
       align-self: center;
+  width: auto;
   z-index: 99;
   height: 8vh;
-  min-height: 42px;
-  max-height: 47px;
-  padding-right: 6vw;
+  min-height: 36px;
+  max-height: 40px;
+  padding-right: 5vw;
   padding-top: 1vh;
   padding-bottom: 1vh;
   opacity: 1;
@@ -245,6 +247,7 @@ header .menu-container .nav-active {
 }
 
 .prev:hover, .next:hover {
+  border: 2px solid white;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -299,10 +302,13 @@ header .menu-container .nav-active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #submit #submit-button {
@@ -327,6 +333,16 @@ header .menu-container .nav-active {
 }
 
 #submit #submit-button .rectangle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 150px;
   height: 50px;
   border-top: 3px solid #e9e9e9;
@@ -334,10 +350,14 @@ header .menu-container .nav-active {
   text-align: center;
 }
 
-#submit #submit-button .rectangle a {
+#submit #submit-button .rectangle .request-container {
+  padding-top: 5px;
+}
+
+#submit #submit-button .rectangle .request-container a {
   text-decoration: none;
   color: #e9e9e9;
-  font-size: 20px;
+  font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 3px;
 }
@@ -356,8 +376,6 @@ header .menu-container .nav-active {
 }
 
 #downward-arrow {
-  -webkit-transform: rotate(270deg);
-          transform: rotate(270deg);
   margin-top: 2vh;
   text-align: center;
 }
@@ -367,7 +385,7 @@ header .menu-container .nav-active {
   color: white;
   cursor: pointer;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 38px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -379,7 +397,8 @@ header .menu-container .nav-active {
   color: #e9e9e9;
 }
 
-#about-us-container h2 {
+#about-us-container div {
+  font-weight: 3;
   margin-top: 2vh;
   text-decoration: underline;
   font-size: 19px;
@@ -393,11 +412,11 @@ header .menu-container .nav-active {
 
 #line {
   border-top: 1px solid #ef9629;
-  margin-top: 2vh;
+  margin-top: 5vh;
 }
 
 #contact-info {
-  margin: 2vh 0 2vh 0;
+  padding: 5vh 0 5vh 0;
   color: #e9e9e9;
   text-align: center;
   font-size: 15px;
