created all html page templates

--- a/css/services/mobile.scss
+++ b/css/services/mobile.scss
@@ -137,166 +137,8 @@ header {
 
 }
 
-// slideshow carousel 
-.carousel-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    //justify-content: center;
-}
 
- .slideshow-container{
-    width: 90vw;
-    position: relative;
-    overflow: hidden; // crops pictures
-    height: 50vh;
-    img{
-        position:absolute;
-        height:100%;
-        left:50%;
-        top:50%;
-        transform:translate(-50%, -50%);
-    }
- }
-
-    .slide{
-        display: none;
-    }
-
-    .prev, .next{
-        cursor: pointer;
-        position: absolute;
-        top: 40%;
-        width: auto;
-        padding: 5vw;
-        color: white;
-        font-weight: bold;
-        font-size: 25px;
-        transition: 0.6s ease;
-        user-select: none;
-    }
-
-    .next{
-        right: 0;
-        //margin-right: 4vw;
-    }
-
-    .prev:hover, .next:hover{
-        border: 2px solid white;
-        background-color: rgba(0,0,0,0.9);
-    }
-    // styling to make dots border-radius for corners
-    .dot-container{
-        margin-top: 15px;
-        text-align: center;
-    }
-    .dot{
-        cursor: pointer;
-        height: 12px;
-        width: 12px;
-        margin: 0 3px;
-        background-color: white;
-        border-radius: 50%;
-        display: inline-block; // use this to show inside the container
-        transition: background-color 0.6s ease;
-    }
-    .active, .dot:hover{
-        background-color: $logo-color;
-    }
-
-    .fade{
-        animation-name: fade;
-        animation-duration: 1.5s;
-    }
-    @keyframes fade{
-        from{opacity: .4}
-        to{opacity: 1}
-    }
-
-    // submit quote
-
-    #submit{
-        margin-top: 15px;
-        display:flex;
-        flex-direction:row;
-        justify-content: center;
-        #submit-button{
-            display:flex;
-            flex-direction:row;
-            justify-content: center;
-            .halfCircleLeft{
-                width: 25px;
-                height: 45px;
-                border: 3px solid $font-color;
-                border-right: none;
-                border-radius: 25px 0 0 25px;
-            }
-            .rectangle{
-                display:flex;
-                flex-direction: column;
-                align-items: center;
-                width: 145px;
-                height: 45px;
-                border-top: 3px solid $font-color;
-                border-bottom: 3px solid $font-color;
-                text-align:center;
-                .request-container{
-                    padding-top: 2px;
-                    a{
-                        text-decoration: none;
-                        color: $font-color;
-                        font-size: 15px;
-                        text-transform: uppercase;
-                        letter-spacing: 3px;
-                    }
-                }
-
-            }
-            .halfCircleRight{
-                width: 25px;
-                height: 45px;
-                border: 3px solid $font-color;
-                border-left: none;
-                border-radius: 0 25px 25px 0;            
-            }
-    }
-
-}
-
-
-#downward-arrow{
-
-    margin-top: 1vh;
-    text-align: center;
-    a{
-        text-decoration: none;
-        color: $font-color;
-        cursor: pointer;
-        font-weight: bold;
-        font-size: 38px;
-        user-select: none;
-    }
-    a:hover{
-        color: white;
-        font-size: 40px;
-    }
-}
-
-#about-us-container{
-    text-align: center;
-    color: $font-color;
-    div{
-        font-weight: 3;
-        margin-top: 2vh;
-        text-decoration: underline;
-        font-size: 19px;
-    }
-    p{
-        margin-top: 2vh;
-        padding: 0 3vw 0 3vw;
-        font-size: 14px;
-    }
-}
+//footer
 
 #line{
     border-top: 1px solid $logo-color;
