--- a/css/projects_exterior/mobile.css
+++ b/css/projects_exterior/mobile.css
@@ -192,7 +192,12 @@ header .menu-container .nav-active {
   }
 }
 
-.carousel-container {
+#line {
+  border-top: 1px solid #ef9629;
+  margin-top: 5vh;
+}
+
+footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -203,211 +208,45 @@ header .menu-container .nav-active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.slideshow-container {
-  width: 90vw;
-  position: relative;
-  overflow: hidden;
-  height: 50vh;
-}
-
-.slideshow-container img {
-  position: absolute;
-  height: 100%;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.slide {
-  display: none;
-}
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 5vw;
-  color: white;
-  font-weight: bold;
-  font-size: 25px;
-  -webkit-transition: 0.6s ease;
-  transition: 0.6s ease;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.next {
-  right: 0;
-}
-
-.prev:hover, .next:hover {
-  border: 2px solid white;
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
-.dot-container {
-  margin-top: 15px;
-  text-align: center;
-}
-
-.dot {
-  cursor: pointer;
-  height: 12px;
-  width: 12px;
-  margin: 0 3px;
-  background-color: white;
-  border-radius: 50%;
-  display: inline-block;
-  -webkit-transition: background-color 0.6s ease;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #ef9629;
-}
-
-.fade {
-  -webkit-animation-name: fade;
-          animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: .4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: .4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#submit {
-  margin-top: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
-#submit #submit-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#submit #submit-button .halfCircleLeft {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e9e9e9;
-  border-right: none;
-  border-radius: 25px 0 0 25px;
-}
-
-#submit #submit-button .rectangle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 145px;
-  height: 45px;
-  border-top: 3px solid #e9e9e9;
-  border-bottom: 3px solid #e9e9e9;
-  text-align: center;
-}
-
-#submit #submit-button .rectangle .request-container {
-  padding-top: 2px;
-}
-
-#submit #submit-button .rectangle .request-container a {
-  text-decoration: none;
+footer #contact-info {
+  padding: 4vh 0 2vh 0;
   color: #e9e9e9;
+  text-align: center;
   font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
 }
 
-#submit #submit-button .halfCircleRight {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e9e9e9;
-  border-left: none;
-  border-radius: 0 25px 25px 0;
+footer #social-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-#downward-arrow {
-  margin-top: 1vh;
-  text-align: center;
+footer #social-media #social-icons img {
+  background-color: #e9e9e9;
+  border-radius: 50%;
+  border: 2px solid #e9e9e9;
+  width: auto;
+  height: 7vh;
+  min-height: 40px;
+  max-height: 45px;
+  margin: 0 1vw 2vh 1vw;
 }
 
-#downward-arrow a {
-  text-decoration: none;
-  color: #e9e9e9;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 38px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-#downward-arrow a:hover {
-  color: white;
-  font-size: 40px;
-}
-
-#about-us-container {
-  text-align: center;
-  color: #e9e9e9;
-}
-
-#about-us-container div {
-  font-weight: 3;
-  margin-top: 2vh;
-  text-decoration: underline;
-  font-size: 19px;
-}
-
-#about-us-container p {
-  margin-top: 2vh;
-  padding: 0 3vw 0 3vw;
-  font-size: 14px;
+footer #social-media #social-icons img:hover {
+  background-color: white;
+  border-width: 3px;
 }
 
 #line {
