--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -1,4 +1,4 @@
-@media (min-width: 475px) {
+@media (min-width: 475px) and (min-height: 500px) {
   header .logo-container {
     padding-top: 5vh;
     margin-bottom: 5vh;
