--- a/css/home/desktop.scss
+++ b/css/home/desktop.scss
@@ -4,7 +4,7 @@ $background-color: rgb(22, 22, 22);
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
 
-@media(min-width: 475px){
+@media(min-width: 475px) and (min-height:500px){
     header{
         .logo-container{
             padding-top: 5vh;
