--- a/css/projects_interior/mobile.scss
+++ b/css/projects_interior/mobile.scss
@@ -136,3 +136,92 @@ header {
     }
 
 }
+
+#submit{
+    margin-top: 15px;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    #submit-button{
+        display:flex;
+        flex-direction:row;
+        justify-content: center;
+        .halfCircleLeft{
+            width: 25px;
+            height: 45px;
+            border: 3px solid $font-color;
+            border-right: none;
+            border-radius: 25px 0 0 25px;
+        }
+        .rectangle{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            width: 145px;
+            height: 45px;
+            border-top: 3px solid $font-color;
+            border-bottom: 3px solid $font-color;
+            text-align:center;
+            .request-container{
+                padding-top: 2px;
+                a{
+                    text-decoration: none;
+                    color: $font-color;
+                    font-size: 15px;
+                    text-transform: uppercase;
+                    letter-spacing: 3px;
+                }
+            }
+
+        }
+        .halfCircleRight{
+            width: 25px;
+            height: 45px;
+            border: 3px solid $font-color;
+            border-left: none;
+            border-radius: 0 25px 25px 0;            
+        }
+    }
+}
+
+// footer
+#line{
+    border-top: 1px solid $logo-color;
+    margin-top: 5vh;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    #contact-info{
+        padding: 4vh 0 2vh 0;
+        // margin-bottom: 5vh;
+        color: $font-color;
+        text-align: center;
+        font-size: 15px;
+    }
+    #social-media{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        #social-icons{
+            img{
+                background-color: $font-color;
+                border-radius:50%;
+                border: 2px solid $font-color;
+                width: auto;
+                height: 7vh;
+                min-height: 40px;
+                max-height: 45px;
+                margin: 0 1vw 2vh 1vw;
+            }
+            img:hover{
+                background-color: white;
+                border-width: 3px;
+            }
+        }
+
+
+    }
+}
