--- a/css/projects_exterior/mobile.scss
+++ b/css/projects_exterior/mobile.scss
@@ -222,7 +222,6 @@ header {
 .close{
     color: white;
     position: absolute;
-    //top: 10vh;;
     right: 5vw;
     font-size: 35px;
     font-weight: bold;
@@ -253,7 +252,7 @@ header {
     position: absolute;
     top: 40%;
     width: auto;
-    padding: 5vw;
+    padding: 15px;
     color: white;
     font-weight: bold;
     font-size: 38px;
@@ -268,7 +267,7 @@ header {
 }
 
 .prev:hover, .next:hover{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #submit{
