--- a/css/projects_interior/mobile.css
+++ b/css/projects_interior/mobile.css
@@ -342,7 +342,7 @@ header .menu-container .nav-active {
   position: absolute;
   top: 40%;
   width: auto;
-  padding: 5vw;
+  padding: 15px;
   color: white;
   font-weight: bold;
   font-size: 38px;
@@ -361,7 +361,7 @@ header .menu-container .nav-active {
 }
 
 .prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #submit {
