--- a/css/services/desktop.css
+++ b/css/services/desktop.css
@@ -1,4 +1,4 @@
-@media (min-width: 475px) and (min-height: 500px) {
+@media (min-width: 450px) and (min-height: 500px) {
   header .logo-container {
     padding-top: 5vh;
     margin-bottom: 5vh;
@@ -64,73 +64,68 @@
     min-width: 50px;
   }
   header .menu-container .nav ul li a:hover {
-    font-size: 18px;
+    font-size: 22px;
   }
   header .menu-container .nav ul li a {
-    font-size: 17px;
+    font-size: 20px;
     letter-spacing: 4px;
   }
   header .menu-container .nav ul li a .active {
     font-size: 19px;
   }
-  .desktop-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .desktop-line {
+    margin-top: 10px;
+  }
+  h3 {
+    font-size: 24px;
+  }
+  .container.left, .container.right {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    width: 90vw;
+    margin: 2vh 0 0 0;
   }
-  .desktop-container .carousel-container {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 0 2vw 0 4vw;
+  .container.left p, .container.right p {
+    width: 40vw;
+    font-size: 20px;
+    padding: 0 2vw 0 2vw;
   }
-  .desktop-container .carousel-container .slideshow-container {
-    width: 60vw;
-    margin-top: 5vw;
+  .container.left .carousel-container, .container.right .carousel-container {
+    margin: 0;
+    padding: 0;
   }
-  .desktop-container .carousel-container .slideshow-container .next, .desktop-container .carousel-container .slideshow-container .prev {
-    padding: 8px;
+  .container.left .carousel-container {
+    padding-left: 5vw;
   }
-  .desktop-container #about-us-container {
+  .container.left p {
+    padding-left: 5vw;
+  }
+  .container.right {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 30vw;
-    margin-top: 4vw;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    width: 100vw;
+    padding-left: 5vw;
   }
-  .desktop-container #about-us-container div {
-    margin-top: 0;
-    font-weight: 6;
-    font-size: 22px;
-    letter-spacing: 3px;
+  .container.right p {
+    padding-right: 5vw;
   }
-  .desktop-container #about-us-container p {
-    font-size: 15px;
-    letter-spacing: 1px;
+  .carousel-container .slideshow-container {
+    width: 50vw;
   }
-  #submit {
-    display: none;
-  }
-  #downward-arrow {
-    display: none;
-  }
-  #contact-info {
-    margin: 0;
-    padding-top: 2vh;
+  .prev, .next {
+    top: 35%;
+    font-size: 20px;
+    padding: 5vw;
   }
 }
 /*# sourceMappingURL=desktop.css.map */
