--- a/css/services/mobile.css
+++ b/css/services/mobile.css
@@ -147,7 +147,7 @@ header .menu-container .nav ul li a:hover {
 }
 
 header .menu-container .nav ul a {
-  color: #e9e9e9;
+  color: #e0e0e0;
   text-decoration: none;
   letter-spacing: 3px;
   font-size: 14px;
@@ -297,6 +297,42 @@ header .menu-container .nav-active {
   }
 }
 
+h3 {
+  font-size: 18px;
+}
+
+h3 {
+  color: #e0e0e0;
+  text-align: center;
+  font-weight: 500;
+}
+
+.line {
+  width: 90vw;
+  border: 1px solid #ef9629;
+}
+
+.container-title, .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 2vh 0 2vh 0;
+}
+
+.container-title p, .container p {
+  width: 90vw;
+  text-align: center;
+  color: #e0e0e0;
+  font-size: 16px;
+}
+
 #submit {
   margin-top: 5vh;
   display: -webkit-box;
@@ -327,7 +363,7 @@ header .menu-container .nav-active {
 #submit #submit-button .halfCircleLeft {
   width: 25px;
   height: 45px;
-  border: 3px solid #e9e9e9;
+  border: 3px solid #e0e0e0;
   border-right: none;
   border-radius: 25px 0 0 25px;
 }
@@ -345,8 +381,8 @@ header .menu-container .nav-active {
           align-items: center;
   width: 145px;
   height: 45px;
-  border-top: 3px solid #e9e9e9;
-  border-bottom: 3px solid #e9e9e9;
+  border-top: 3px solid #e0e0e0;
+  border-bottom: 3px solid #e0e0e0;
   text-align: center;
 }
 
@@ -356,7 +392,7 @@ header .menu-container .nav-active {
 
 #submit #submit-button .rectangle .request-container a {
   text-decoration: none;
-  color: #e9e9e9;
+  color: #e0e0e0;
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -365,7 +401,7 @@ header .menu-container .nav-active {
 #submit #submit-button .halfCircleRight {
   width: 25px;
   height: 45px;
-  border: 3px solid #e9e9e9;
+  border: 3px solid #e0e0e0;
   border-left: none;
   border-radius: 0 25px 25px 0;
 }
@@ -393,7 +429,7 @@ footer {
 
 footer #contact-info {
   padding: 4vh 0 2vh 0;
-  color: #e9e9e9;
+  color: #e0e0e0;
   text-align: center;
   font-size: 15px;
 }
@@ -412,9 +448,9 @@ footer #social-media {
 }
 
 footer #social-media #social-icons img {
-  background-color: #e9e9e9;
+  background-color: #e0e0e0;
   border-radius: 50%;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #e0e0e0;
   width: auto;
   height: 7vh;
   min-height: 40px;
