--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -218,29 +218,63 @@ fieldset label {
   margin-top: 2vh;
 }
 
-fieldset input {
+fieldset input, fieldset .select-container {
   width: 80vw;
   border-radius: 5px;
+  min-height: 30px;
+  max-height: 40px;
+  height: 10vh;
+  border: 2px solid #e9e9e9;
+  background-color: transparent;
+  color: #e9e9e9;
+  padding: 0 0 0 0.75rem;
+}
+
+fieldset .select-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 0 0 0;
+}
+
+fieldset .select-container img {
+  position: absolute;
+  right: 10vw;
+  height: 5vh;
+  min-height: 15px;
+  max-height: 20px;
+}
+
+fieldset select {
+  width: 100vw;
+  min-height: 30px;
+  max-height: 40px;
+  height: 10vh;
+  background-color: transparent;
+  color: #e9e9e9;
+  padding: 0 0 0 0.75rem;
+  position: relative;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 fieldset textarea {
   width: 80vw;
   height: 20vh;
+  min-height: 150px;
+  max-height: 300px;
+  color: #e9e9e9;
+  background-color: transparent;
+  padding: 0.75rem 0 0 1rem;
+  border: 2px solid #e9e9e9;
 }
 
 fieldset .message-field {
   margin-bottom: 5vh;
-}
-
-fieldset select {
-  background-color: #e9e9e9;
-  width: 80vw;
-  border-radius: 5px;
-  display: inline-block;
-}
-
-fieldset select option {
-  width: 80vw;
 }
 
 fieldset select:invalid,
@@ -262,6 +296,10 @@ fieldset ::-ms-input-placeholder {
 
 fieldset ::placeholder {
   color: grey;
+}
+
+fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
+  background: rgba(239, 199, 41, 0.15);
 }
 
 .center-button {
@@ -293,16 +331,17 @@ fieldset ::placeholder {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 2px solid #e9e9e9;
-  width: 150px;
-  height: 25px;
-  border-radius: 25px;
 }
 
 .center-button .button-container button {
   color: #e9e9e9;
   font-size: 18px;
   letter-spacing: 5px;
+  background-color: #161616;
+  border: 2px solid #e9e9e9;
+  width: 150px;
+  height: 25px;
+  border-radius: 25px;
 }
 
 .line {
