--- a/css/services/desktop.scss
+++ b/css/services/desktop.scss
@@ -112,8 +112,8 @@ $hover-background: rgb(95, 95, 95);
     }
 
     .prev, .next{
-        top: 35%;
+        top: 45%;
         font-size: 20px;
-        padding: 5vw;
+        padding: 15px;
     }
 }
