--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -306,8 +306,11 @@ footer{
     align-items: center;
     justify-content: center;
     #contact-info{
+        a{
+            text-decoration: none;
+            color: $font-color;
+        }
         padding: 4vh 0 2vh 0;
-        // margin-bottom: 5vh;
         color: $font-color;
         text-align: center;
         font-size: 15px;
@@ -317,6 +320,9 @@ footer{
         flex-direction: row;
         align-items: center;
         #social-icons{
+            a{
+                text-decoration: none;
+            }
             img{
                 background-color: $font-color;
                 border-radius:50%;
