--- a/css/projects_exterior/mobile.scss
+++ b/css/projects_exterior/mobile.scss
@@ -371,8 +371,11 @@ footer{
     align-items: center;
     justify-content: center;
     #contact-info{
+        a{
+            text-decoration: none;
+            color: $font-color;
+        }
         padding: 4vh 0 2vh 0;
-        // margin-bottom: 5vh;
         color: $font-color;
         text-align: center;
         font-size: 15px;
@@ -382,6 +385,9 @@ footer{
         flex-direction: row;
         align-items: center;
         #social-icons{
+            a{
+                text-decoration: none;
+            }
             img{
                 background-color: $font-color;
                 border-radius:50%;
