--- a/css/projects_interior/mobile.css
+++ b/css/projects_interior/mobile.css
@@ -465,6 +465,11 @@ footer #contact-info {
   font-size: 15px;
 }
 
+footer #contact-info a {
+  text-decoration: none;
+  color: #e9e9e9;
+}
+
 footer #social-media {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -476,6 +481,10 @@ footer #social-media {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+footer #social-media #social-icons a {
+  text-decoration: none;
 }
 
 footer #social-media #social-icons img {
